# sqlalchemy-dataflex

./: .gitignore  AUTHORS.md  LICENSE.md  MANIFEST.in  README.md  flexodbc_capabilities.json  pyproject.toml  setup.cfg  setup.py
sqlalchemy_dataflex/: __init__.py  base.py  pyodbc.py  requirements.py
test/: test_suite.py
test/data/: _test_table.int  autoinc_pk.fd  autoinc_pk.int  boolean_table.def  boolean_table.fd  codemast.def  codetype.def  date_table.def  date_table.fd  date_table.hdr  date_table.int  date_time_table.fd  date_time_table.hdr  date_time_table.tag  dev.int  dingalings.hdr  dingalings.tag  email_addresses.hdr  flexerrs.def  float_table.def  float_table.fd  float_table.int  foo.fd  foo.hdr  foo.int  includes_defaults.tag  int_table.def  int_table.int  integer_table.hdr  integer_table.tag  loanfile.fd  manual_pk.def  manual_pk.hdr  manual_pk.int  noncol_idx_test_nopk.hdr  noncol_idx_test_nopk.int  numeric_table.def  numeric_table.fd  numeric_table.hdr  numeric_table.int  (+35 more)
tests/: __init__.py  conftest.py  test_suite.py
tests/data/: _test_table.def  _test_table.fd  _test_table.hdr  autoinc_pk.def  autoinc_pk.hdr  boolean_table.hdr  boolean_table.int  boolean_table.tag  collate.cfg  comment_test.hdr  comment_test.int  comment_test.tag  date_time_table.def  date_time_table.int  date_time_table.k1  dingalings.int  email_addresses.int  email_addresses.tag  filelist.cfg  flexerrs.tag  float_table.hdr  foo.def  has_dates.hdr  has_dates.tag  includes_defaults.hdr  includes_defaults.int  int_table.fd  int_table.hdr  integer_table.def  integer_table.fd  integer_table.int  manual_pk.fd  manual_pk.tag  noncol_idx_test_nopk.k1  noncol_idx_test_pk.hdr  noncol_idx_test_pk.int  noncol_idx_test_pk.tag  plain_pk.def  quote_'_one.k1  quote_'_one.tag  (+28 more)
